--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "setup-project": "npm i && cd client && npm i",
+    "start": "node server.js",
     "server": "nodemon server",
-    "client": "cd client && npm run dev",
-    "dev": "concurrently --kill-others-on-fail \" npm run server\" \" npm run client\""
+    "client": "cd client && npm run dev"
   },
   "keywords": [],
   "author": "",
